# model-uncertainty-exploration

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: python-test.yml
mue/: config.py  types.py
mue/data/: __init__.py
mue/models/: __init__.py  base.py  gp.py
tests/: conftest.py  test_buffer.py  test_config.py  test_gp.py  test_models.py  test_types.py
