[project]
name = "model-uncertainty-exploration"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13, <3.14"
dependencies = [
    "flashbax>=0.1.3",
    "gpjax",
    "gymnasium[classic-control]>=1.2.3",
    "seaborn>=0.13.2",
    "tensorboardx>=2.6.5",
]

[tool.uv.sources]
gpjax = { git = "https://github.com/thomaspinder/GPJax.git" }

[dependency-groups]
dev = [
    "ruff>=0.15.9",
]
