[project]
name = "model-uncertainty-exploration"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13, <3.14"
dependencies = [
    "flashbax>=0.1.3",
    "flax>=0.10.0",
    "gpjax",
    "gymnasium[classic-control]>=1.2.3",
    "jax[cuda12]>=0.9.2",
    "optax>=0.2.0",
    "pyyaml>=6.0",
    "seaborn>=0.13.2",
    "tensorboard>=2.20.0",
    "tensorboardx>=2.6.5",
    "tqdm>=4.67.3",
]

[tool.uv.sources]
gpjax = { git = "https://github.com/thomaspinder/GPJax.git" }

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.15.9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]
